@@ -68,7 +68,7 @@ program plotpltp
   labels(12) = 'T\dmax\u (K)'
   labels(13) = '\gr\dc\u (g cm\u-3\d)'
   labels(14) = '\gr\dTmax\u (g cm\u-3\d)'
-  labels(15) = 'log U\dbind\u (erg)'
+  labels(15) = 'log E\dbind\u (erg)'
   labels(16) = 'L\dH\u (L\d\(2281)\u)'
   labels(17) = 'L\dHe\u (L\d\(2281)\u)'
   labels(18) = 'L\dC\u (L\d\(2281)\u)'
@@ -210,7 +210,7 @@ program plotpltp
   write(6,'(A)')' 12: Tmax       26: Ralv                                 '
   write(6,'(A)')' 13: Rhoc       27: Bp         93: dH/dt`s               '
   write(6,'(A)')' 14: RhoTm                     94: Convection plot       '
-  write(6,'(A)')' 15: Ubind                     95: Mdots                 '
+  write(6,'(A)')' 15: Ebind                     95: Mdots                 '
   write(6,'(A)')'                               96: Timescales            '
   write(6,'(A)')'                                                         '
   write(6,'(A)')'       H   He  C   N   O   Ne  Mg                        '
